log
Fri 12 Aug 2022 01:07:25 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bf268ec
Fri 12 Aug 2022 01:11:07 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘)’ token
   40 |   *suma = sumaN(a, );
      |                    ^
Compilation failed
bdb8bc5
Fri 12 Aug 2022 01:11:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3104215
Fri 12 Aug 2022 01:15:37 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:80:11: error: returning ‘int *’ from a function with incompatible return type ‘Vector *’ [-Werror=incompatible-pointer-types]
   80 |    return v;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
9178e0a
Fri 12 Aug 2022 01:15:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:79:12: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   79 |    int v = calloc(n, sizeof(int));
      |            ^~~~~~
exercises.c:80:11: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   80 |    return v;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4f14f7a
Fri 12 Aug 2022 01:17:01 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:86:11: error: returning ‘int *’ from a function with incompatible return type ‘Vector *’ [-Werror=incompatible-pointer-types]
   86 |    return v;
      |           ^
exercises.c:86:11: error: function returns address of local variable [-Werror=return-local-addr]
cc1: all warnings being treated as errors
Compilation failed
cdfd35b
Fri 12 Aug 2022 01:17:52 PM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    strcpy(p[0].nombre, nombre);
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
335a25e
Fri 12 Aug 2022 01:26:06 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:16: error: invalid initializer
   58 |    Persona p = malloc(1 * sizeof(int));
      |                ^~~~~~
exercises.c:60:12: error: subscripted value is neither array nor pointer nor vector
   60 |    strcpy(p[0].nombre, nombre);
      |            ^
exercises.c:61:12: error: subscripted value is neither array nor pointer nor vector
   61 |    strcpy(p[0].rut, rut);
      |            ^
exercises.c:62:5: error: subscripted value is neither array nor pointer nor vector
   62 |    p[0].edad = edad;
      |     ^
exercises.c:64:11: error: invalid type argument of unary ‘*’ (have ‘Persona’)
   64 |    return *p;
      |           ^~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d9c0520
Fri 12 Aug 2022 01:26:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:64:11: error: incompatible types when returning type ‘Persona’ but ‘Persona *’ was expected
   64 |    return *p;
      |           ^~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
211d32e
Fri 12 Aug 2022 01:26:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:519,
                 from test.c:3:
In function ‘strcpy’,
    inlined from ‘crearPersona’ at exercises.c:61:4:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/bits/string_fortified.h:79:10: error: ‘__builtin___strcpy_chk’ offset 30 is out of the bounds [0, 4] [-Werror=array-bounds]
   79 |   return __builtin___strcpy_chk (__dest, __src, __glibc_objsize (__dest));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5a407c9
Sun 14 Aug 2022 12:12:08 AM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:33: error: ‘largo’ undeclared (first use in this function)
   81 |    Vector *v = (Vector*) calloc(largo, sizeof(int)));
      |                                 ^~~~~
exercises.c:81:33: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:81:52: error: expected ‘,’ or ‘;’ before ‘)’ token
   81 |    Vector *v = (Vector*) calloc(largo, sizeof(int)));
      |                                                    ^
exercises.c:83:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   83 |    return *v;
      |           ^~
exercises.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2e54ade
